--- a/01 preprocessing/prepocessing.ipynb
+++ b/01 preprocessing/prepocessing.ipynb
@@ -13,6 +13,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Описание данных\n",
+    "- children — количество детей в семье\n",
+    "- days_employed — общий трудовой стаж в днях\n",
+    "- dob_years — возраст клиента в годах\n",
+    "- education — уровень образования клиента\n",
+    "- education_id — идентификатор уровня образования\n",
+    "- family_status — семейное положение\n",
+    "- family_status_id — идентификатор семейного положения\n",
+    "- gender — пол клиента\n",
+    "- income_type — тип занятости\n",
+    "- debt — имел ли задолженность по возврату кредитов\n",
+    "- total_income — ежемесячный доход\n",
+    "- purpose — цель получения кредита"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Шаг 1. Откройте файл с данными и изучите общую информацию. "
    ]
   },
