--- a/04 Test1/test1.ipynb
+++ b/04 Test1/test1.ipynb
@@ -30,7 +30,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Шаг 1. Откройте файл с данными и изучите общую информацию"
+    "#### Шаг 1. Открыть файл с данными и изучить общую информацию"
    ]
   },
   {
@@ -232,13 +232,13 @@
    "metadata": {},
    "source": [
     "### Предподготовка\n",
-    "- Замените названия столбцов (приведите к нижнему регистру);\n",
-    "- Преобразуйте данные в нужные типы. Опишите, в каких столбцах заменили тип данных и почему;\n",
-    "- Обработайте пропуски при необходимости:\n",
-    "- Объясните, почему заполнили пропуски определённым образом или почему не стали это делать;\n",
-    "- Опишите причины, которые могли привести к пропускам;\n",
-    "- Обратите внимание на аббревиатуру 'tbd' в столбцах с рейтингом. Отдельно разберите это значение и опишите, как его обработать;\n",
-    "- Посчитайте суммарные продажи во всех регионах и запишите их в отдельный столбец."
+    "- Заменить названия столбцов (привести к нижнему регистру);\n",
+    "- Преобразовать данные в нужные типы. Описать, в каких столбцах заменили тип данных и почему;\n",
+    "- Обработать пропуски при необходимости:\n",
+    "- Объяснить, почему заполнили пропуски определённым образом или почему не стали это делать;\n",
+    "- Описать причины, которые могли привести к пропускам;\n",
+    "- Обратить внимание на аббревиатуру 'tbd' в столбцах с рейтингом. Отдельно разобрать это значение и описать, как его обработать;\n",
+    "- Посчитать суммарные продажи во всех регионах и записать их в отдельный столбец."
    ]
   },
   {
@@ -1051,21 +1051,21 @@
    "source": [
     "### Исследовательский анализ данных\n",
     "- Сколько игр выпускалось в разные годы? Важны ли данные за все периоды?\n",
-    "- Как менялись продажи по платформам? Выберите платформы с наибольшими суммарными продажами и постройте распределение по годам. За какой характерный срок появляются новые и исчезают старые платформы?\n",
-    "- Возьмите данные за соответствующий актуальный период. Актуальный период определите самостоятельно в результате исследования предыдущих вопросов. Основной фактор — эти данные помогут построить прогноз на 2017 год.\n",
-    "- Не учитывайте в работе данные за предыдущие годы.\n",
-    "- Какие платформы лидируют по продажам, растут или падают? Выберите несколько потенциально прибыльных платформ.\n",
-    "- Постройте график «ящик с усами» по глобальным продажам каждой игры и разбивкой по платформам. Велика ли разница в продажах? А в средних продажах на разных платформах? Опишите результат.\n",
-    "- Посмотрите, как влияют на продажи внутри одной популярной платформы отзывы пользователей и критиков. Постройте диаграмму рассеяния и посчитайте корреляцию между отзывами и продажами. Сформулируйте выводы.\n",
-    "- Соотнесите выводы с продажами игр на других платформах.\n",
-    "- Посмотрите на общее распределение игр по жанрам. Что можно сказать о самых прибыльных жанрах? Выделяются ли жанры с высокими и низкими продажами?"
+    "- Как менялись продажи по платформам? Выбрать платформы с наибольшими суммарными продажами и построить распределение по годам. За какой характерный срок появляются новые и исчезают старые платформы?\n",
+    "- Выберать данные за соответствующий актуальный период. Актуальный период определить самостоятельно в результате исследования предыдущих вопросов. Основной фактор — эти данные помогут построить прогноз на 2017 год.\n",
+    "- Не учитывать в работе данные за предыдущие годы.\n",
+    "- Какие платформы лидируют по продажам, растут или падают? Выберать несколько потенциально прибыльных платформ.\n",
+    "- Постройть график «ящик с усами» по глобальным продажам каждой игры и разбивкой по платформам. Велика ли разница в продажах? А в средних продажах на разных платформах? Описать результат.\n",
+    "- Как влияют на продажи внутри одной популярной платформы отзывы пользователей и критиков. Построить диаграмму рассеяния и посчитать корреляцию между отзывами и продажами. Сформулировать выводы.\n",
+    "- Соотнести выводы с продажами игр на других платформах.\n",
+    "- Построить общее распределение игр по жанрам. Какие жанры самые прибыльные? Выделяются ли жанры с высокими и низкими продажами?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Посмотрите, сколько игр выпускалось в разные годы. Важны ли данные за все периоды?"
+    "Сколько игр выпускалось в разные годы? Важны ли данные за все периоды?"
    ]
   },
   {
@@ -1101,7 +1101,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###### Посмотрите, как менялись продажи по платформам. Выберите платформы с наибольшими суммарными продажами и постройте распределение по годам. За какой характерный срок появляются новые и исчезают старые платформы?"
+    "###### Как менялись продажи по платформам? Выбрать платформы с наибольшими суммарными продажами и построить распределение по годам. За какой характерный срок появляются новые и исчезают старые платформы?"
    ]
   },
   {
@@ -1317,7 +1317,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###### Возьмите данные за соответствующий актуальный период. Актуальный период определите самостоятельно в результате исследования предыдущих вопросов. Основной фактор — эти данные помогут построить прогноз на 2017 год."
+    "###### Выберите данные за соответствующий актуальный период. Актуальный период определите самостоятельно в результате исследования предыдущих вопросов. Основной фактор — эти данные помогут построить прогноз на 2017 год."
    ]
   },
   {
@@ -1332,7 +1332,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Не учитывайте в работе данные за предыдущие годы\n",
+    "##### Не учитывать в работе данные за предыдущие годы\n",
     "сделаем срез данных, начиная с 2006го года."
    ]
   },
@@ -1350,7 +1350,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Какие платформы лидируют по продажам, растут или падают? Выберите несколько потенциально прибыльных платформ."
+    "##### Какие платформы лидируют по продажам, растут или падают? Выбрать несколько потенциально прибыльных платформ."
    ]
   },
   {
@@ -1899,7 +1899,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Постройте график «ящик с усами» по глобальным продажам каждой игры и разбивкой по платформам. Велика ли разница в продажах? А в средних продажах на разных платформах? Опишите результат."
+    "#### Построить график «ящик с усами» по глобальным продажам каждой игры и разбивкой по платформам. Велика ли разница в продажах? А в средних продажах на разных платформах?"
    ]
   },
   {
@@ -2005,7 +2005,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Посмотрите, как влияют на продажи внутри одной популярной платформы отзывы пользователей и критиков. Постройте диаграмму рассеяния и посчитайте корреляцию между отзывами и продажами. Сформулируйте выводы."
+    "##### Как влияют на продажи внутри одной популярной платформы отзывы пользователей и критиков? Построить диаграмму рассеяния и посчитать корреляцию между отзывами и продажами."
    ]
   },
   {
@@ -2213,7 +2213,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Соотнесите выводы с продажами игр на других платформах"
+    "##### Соотнести выводы с продажами игр на других платформах"
    ]
   },
   {
@@ -2342,7 +2342,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Посмотрите на общее распределение игр по жанрам. Что можно сказать о самых прибыльных жанрах? Выделяются ли жанры с высокими и низкими продажами?"
+    "##### Проанализировать на общее распределение игр по жанрам. Что можно сказать о самых прибыльных жанрах? Выделяются ли жанры с высокими и низкими продажами?"
    ]
   },
   {
@@ -2605,9 +2605,9 @@
    "metadata": {},
    "source": [
     "### Портрет пользователя для каждого региона\n",
-    "- Определите для пользователя каждого региона (NA, EU, JP):\n",
-    "- Самые популярные платформы (топ-5). Опишите различия в долях продаж.\n",
-    "- Самые популярные жанры (топ-5). Поясните разницу.\n",
+    "- Определить для пользователя каждого региона (NA, EU, JP):\n",
+    "- Самые популярные платформы (топ-5).\n",
+    "- Самые популярные жанры (топ-5). Пояснить разницу.\n",
     "- Влияет ли рейтинг ESRB на продажи в отдельном регионе?"
    ]
   },
@@ -2768,7 +2768,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Проверьте гипотезы\n",
+    "### Проверить гипотезы\n",
     "- Средние пользовательские рейтинги платформ Xbox One и PC одинаковые;\n",
     "- Средние пользовательские рейтинги жанров Action (англ. «действие») и Sports (англ. «виды спорта») разные."
    ]
