--- a/07 AB testing/ABtesting.ipynb
+++ b/07 AB testing/ABtesting.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## Описание проекта\n",
     "Анализируем работу крупного интернет-магазина. Вместе с отделом маркетинга мы подготовили список гипотез для увеличения выручки.\n",
-    "Приоритизируйте гипотезы, запустите A/B-тест и проанализируйте результаты."
+    "Приоритизировать гипотезы, запустить A/B-тест и проанализировать результаты."
    ]
   },
   {
@@ -15,9 +15,9 @@
    "source": [
     "### Часть 1. Приоритизация гипотез.\n",
     "\n",
-    "- Примените фреймворк ICE для приоритизации гипотез. Отсортируйте их по убыванию приоритета.\n",
-    "- Примените фреймворк RICE для приоритизации гипотез. Отсортируйте их по убыванию приоритета.\n",
-    "- Укажите, как изменилась приоритизация гипотез при применении RICE вместо ICE. Объясните, почему так произошло."
+    "- Применить фреймворк ICE для приоритизации гипотез. Отсортировать их по убыванию приоритета.\n",
+    "- Применить фреймворк RICE для приоритизации гипотез. Отсортировать их по убыванию приоритета.\n",
+    "- Указать, как изменилась приоритизация гипотез при применении RICE вместо ICE. Объяснить, почему так произошло."
    ]
   },
   {
@@ -503,21 +503,21 @@
     "### Часть 2. Анализ A/B-теста\n",
     "Вы провели A/B-тест и получили результаты, которые описаны в файлах /datasets/orders.csv и /datasets/visitors.csv.\n",
     "\n",
-    "#### Проанализируйте A/B-тест:\n",
-    "- Постройте график кумулятивной выручки по группам. Сделайте выводы и предположения.\n",
-    "- Постройте график кумулятивного среднего чека по группам. Сделайте выводы и предположения.\n",
-    "- Постройте график относительного изменения кумулятивного среднего чека группы B к группе A. Сделайте выводы и предположения.\n",
-    "- Постройте график кумулятивной конверсии по группам. Сделайте выводы и предположения.\n",
-    "- Постройте график относительного изменения кумулятивной конверсии группы B к группе A. Сделайте выводы и предположения.\n",
-    "- Постройте точечный график количества заказов по пользователям. Сделайте выводы и предположения.\n",
-    "- Посчитайте 95-й и 99-й перцентили количества заказов на пользователя. Выберите границу для определения аномальных пользователей.\n",
-    "- Постройте точечный график стоимостей заказов. Сделайте выводы и предположения.\n",
-    "- Посчитайте 95-й и 99-й перцентили стоимости заказов. Выберите границу для определения аномальных заказов.\n",
-    "- Посчитайте статистическую значимость различий в конверсии между группами по «сырым» данным. Сделайте выводы и предположения.\n",
-    "- Посчитайте статистическую значимость различий в среднем чеке заказа между группами по «сырым» данным. Сделайте выводы и предположения.\n",
-    "- Посчитайте статистическую значимость различий в конверсии между группами по «очищенным» данным. Сделайте выводы и предположения.\n",
-    "- Посчитайте статистическую значимость различий в среднем чеке заказа между группами по «очищенным» данным. Сделайте выводы и предположения.\n",
-    "- Примите решение по результатам теста и объясните его. Варианты решений: \n",
+    "#### Проанализировать A/B-тест:\n",
+    "- Построить график кумулятивной выручки по группам. Сделать выводы и предположения.\n",
+    "- Построить график кумулятивного среднего чека по группам. Сделать выводы и предположения.\n",
+    "- Построить график относительного изменения кумулятивного среднего чека группы B к группе A. Сделать выводы и предположения.\n",
+    "- Построить график кумулятивной конверсии по группам. Сделать выводы и предположения.\n",
+    "- Построить график относительного изменения кумулятивной конверсии группы B к группе A. Сделать выводы и предположения.\n",
+    "- Построить точечный график количества заказов по пользователям. Сделать выводы и предположения.\n",
+    "- Посчитать 95-й и 99-й перцентили количества заказов на пользователя. Выбрать границу для определения аномальных пользователей.\n",
+    "- Построить точечный график стоимостей заказов. Сделать выводы и предположения.\n",
+    "- Посчитать 95-й и 99-й перцентили стоимости заказов. Выбрать границу для определения аномальных заказов.\n",
+    "- Посчитать статистическую значимость различий в конверсии между группами по «сырым» данным. Сделать выводы и предположения.\n",
+    "- Посчитать статистическую значимость различий в среднем чеке заказа между группами по «сырым» данным. Сделать выводы и предположения.\n",
+    "- Посчитать статистическую значимость различий в конверсии между группами по «очищенным» данным. Сделать выводы и предположения.\n",
+    "- Посчитать статистическую значимость различий в среднем чеке заказа между группами по «очищенным» данным. Сделать выводы и предположения.\n",
+    "- Принять решение по результатам теста и объяснить его. Варианты решений: \n",
     "    - 1. Остановить тест, зафиксировать победу одной из групп. \n",
     "    - 2. Остановить тест, зафиксировать отсутствие различий между группами. \n",
     "    - 3. Продолжить тест."
@@ -728,7 +728,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Постройте график кумулятивной выручки по группам. Сделайте выводы и предположения."
+    "- Построить график кумулятивной выручки по группам. Сделать выводы и предположения."
    ]
   },
   {
@@ -1102,7 +1102,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Постройте график кумулятивного среднего чека по группам. Сделайте выводы и предположения."
+    "- Построить график кумулятивного среднего чека по группам. Сделать выводы и предположения."
    ]
   },
   {
@@ -1142,7 +1142,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Постройте график относительного изменения кумулятивного среднего чека группы B к группе A. Сделайте выводы и предположения."
+    "- Построить график относительного изменения кумулятивного среднего чека группы B к группе A. Сделать выводы и предположения."
    ]
   },
   {
@@ -1187,7 +1187,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Постройте график кумулятивной конверсии по группам. Сделайте выводы и предположения."
+    "- Построить график кумулятивной конверсии по группам. Сделать выводы и предположения."
    ]
   },
   {
@@ -1242,7 +1242,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Постройте график относительного изменения кумулятивной конверсии группы B к группе A. Сделайте выводы и предположения."
+    "- Построить график относительного изменения кумулятивной конверсии группы B к группе A. Сделать выводы и предположения."
    ]
   },
   {
@@ -1374,7 +1374,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Постройте точечный график количества заказов по пользователям. Сделайте выводы и предположения."
+    "- Построить точечный график количества заказов по пользователям. Сделать выводы и предположения."
    ]
   },
   {
@@ -1524,7 +1524,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Посчитайте 95-й и 99-й перцентили количества заказов на пользователя. Выберите границу для определения аномальных пользователей."
+    "- Посчитать 95-й и 99-й перцентили количества заказов на пользователя. Выбрать границу для определения аномальных пользователей."
    ]
   },
   {
@@ -1559,7 +1559,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Постройте точечный график стоимостей заказов. Сделайте выводы и предположения."
+    "- Построить точечный график стоимостей заказов. Сделать выводы и предположения."
    ]
   },
   {
@@ -1821,7 +1821,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Посчитайте 95-й и 99-й перцентили стоимости заказов. Выберите границу для определения аномальных заказов."
+    "- Посчитать 95-й и 99-й перцентили стоимости заказов. Выбрать границу для определения аномальных заказов."
    ]
   },
   {
@@ -1856,7 +1856,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Посчитайте статистическую значимость различий в конверсии между группами по «сырым» данным. Сделайте выводы и предположения."
+    "- Посчитать статистическую значимость различий в конверсии между группами по «сырым» данным. Сделать выводы и предположения."
    ]
   },
   {
@@ -2038,7 +2038,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Посчитайте статистическую значимость различий в среднем чеке заказа между группами по «сырым» данным. Сделайте выводы и предположения."
+    "- Посчитать статистическую значимость различий в среднем чеке заказа между группами по «сырым» данным. Сделать выводы и предположения."
    ]
   },
   {
@@ -2072,7 +2072,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Посчитайте статистическую значимость различий в конверсии между группами по «очищенным» данным. Сделайте выводы и предположения."
+    "- Посчитать статистическую значимость различий в конверсии между группами по «очищенным» данным. Сделать выводы и предположения."
    ]
   },
   {
@@ -2155,7 +2155,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Посчитайте статистическую значимость различий в среднем чеке заказа между группами по «очищенным» данным. Сделайте выводы и предположения."
+    "- Посчитать статистическую значимость различий в среднем чеке заказа между группами по «очищенным» данным. Сделать выводы и предположения."
    ]
   },
   {
@@ -2198,7 +2198,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Примите решение по результатам теста и объясните его. Варианты решений: \n",
+    "- Принять решение по результатам теста и объяснить его. Варианты решений: \n",
     "    - 1. Остановить тест, зафиксировать победу одной из групп. \n",
     "    - 2. Остановить тест, зафиксировать отсутствие различий между группами. \n",
     "    - 3. Продолжить тест."
