--- a/08 Visualisation/visualisation.ipynb
+++ b/08 Visualisation/visualisation.ipynb
@@ -411,16 +411,16 @@
    "metadata": {},
    "source": [
     "### Анализ данных\n",
-    "- [Исследуйте соотношение видов объектов общественного питания по количеству. Постройте график](#types)\n",
-    "- [Исследуйте соотношение сетевых и несетевых заведений по количеству. Постройте график.](#quantity_chain)\n",
+    "- [Исследовать соотношение видов объектов общественного питания по количеству. Построить график](#types)\n",
+    "- [Исследовать соотношение сетевых и несетевых заведений по количеству. Построить график.](#quantity_chain)\n",
     "- [Для какого вида объекта общественного питания характерно сетевое распространение?](#chain_types)\n",
     "- [Что характерно для сетевых заведений: много заведений с небольшим числом посадочных мест в каждом или мало заведений с большим количеством посадочных мест?](#chain_parameters)\n",
-    "- [Для каждого вида объекта общественного питания опишите среднее количество посадочных мест. Какой вид предоставляет в среднем самое большое количество посадочных мест? Постройте графики.](#type_parameters)\n",
-    "- [Выделите в отдельный столбец информацию об улице из столбца address.](#street)\n",
-    "- [Постройте график топ-10 улиц по количеству объектов общественного питания. Воспользуйтесь внешней информацией и ответьте на вопрос — в каких районах Москвы находятся эти улицы?](#top_street)\n",
-    "- [Найдите число улиц с одним объектом общественного питания. Воспользуйтесь внешней информацией и ответьте на вопрос — в каких районах Москвы находятся эти улицы?](#single_rest)\n",
-    "- [Посмотрите на распределение количества посадочных мест для улиц с большим количеством объектов общественного питания. Какие закономерности можно выявить?](#top_street_distribution)\n",
-    "#### Сделайте общий вывод и дайте рекомендации о виде заведения, количестве посадочных мест, а также районе расположения. Прокомментируйте возможность развития сети."
+    "- [Для каждого вида объекта общественного питания описать среднее количество посадочных мест. Какой вид предоставляет в среднем самое большое количество посадочных мест? Построить графики.](#type_parameters)\n",
+    "- [Выделить в отдельный столбец информацию об улице из столбца address.](#street)\n",
+    "- [Построить график топ-10 улиц по количеству объектов общественного питания. В каких районах Москвы находятся эти улицы?](#top_street)\n",
+    "- [Найти число улиц с одним объектом общественного питания. В каких районах Москвы находятся эти улицы?](#single_rest)\n",
+    "- [Проанализируйте распределение количества посадочных мест для улиц с большим количеством объектов общественного питания. Какие закономерности можно выявить?](#top_street_distribution)\n",
+    "#### Сформулировать общий вывод и дать рекомендации о виде заведения, количестве посадочных мест, а также районе расположения. Дать комментарий о возможность развития сети."
    ]
   },
   {
@@ -428,7 +428,7 @@
    "metadata": {},
    "source": [
     "<a id=\"types\"></a>\n",
-    "#### Исследуйте соотношение видов объектов общественного питания по количеству. Постройте график"
+    "#### Исследовать соотношение видов объектов общественного питания по количеству. Построить график."
    ]
   },
   {
@@ -576,7 +576,7 @@
    "metadata": {},
    "source": [
     "<a id=\"quantity_chain\"></a>\n",
-    "### <font color=\"blue\"> Исследуйте соотношение сетевых и несетевых заведений по количеству. Постройте график."
+    "### <font color=\"blue\"> Исследовать соотношение сетевых и несетевых заведений по количеству. Построить график."
    ]
   },
   {
@@ -1342,7 +1342,7 @@
    "metadata": {},
    "source": [
     "<a id=\"type_parameters\"></a>\n",
-    "### <font color=\"blue\">Для каждого вида объекта общественного питания опишите среднее количество посадочных мест. Какой вид предоставляет в среднем самое большое количество посадочных мест? Постройте графики."
+    "### <font color=\"blue\">Для каждого вида объекта общественного питания описать среднее количество посадочных мест. Какой вид предоставляет в среднем самое большое количество посадочных мест? Построить графики."
    ]
   },
   {
@@ -1486,7 +1486,7 @@
    "metadata": {},
    "source": [
     "<a id=\"street\"></a>\n",
-    "### <font color=\"blue\"> Выделите в отдельный столбец информацию об улице из столбца address. "
+    "### <font color=\"blue\"> Выделить в отдельный столбец информацию об улице из столбца address. "
    ]
   },
   {
@@ -1595,7 +1595,7 @@
    "metadata": {},
    "source": [
     "<a id=\"top_street\"></a>\n",
-    "### <font color=\"blue\"> Постройте график топ-10 улиц по количеству объектов общественного питания. Воспользуйтесь внешней информацией и ответьте на вопрос — в каких районах Москвы находятся эти улицы "
+    "### <font color=\"blue\"> Построить график топ-10 улиц по количеству объектов общественного питания. В каких районах Москвы находятся эти улицы?"
    ]
   },
   {
@@ -2940,7 +2940,7 @@
    "metadata": {},
    "source": [
     "<a id=\"single_rest\"></a>\n",
-    "### <font color=\"blue\">Найдите число улиц с одним объектом общественного питания. Воспользуйтесь внешней информацией и ответьте на вопрос — в каких районах Москвы находятся эти улицы?"
+    "### <font color=\"blue\">Найти число улиц с одним объектом общественного питания. В каких районах Москвы находятся эти улицы?"
    ]
   },
   {
@@ -3282,7 +3282,7 @@
    "metadata": {},
    "source": [
     "<a id=\"top_street_distribution\"></a>\n",
-    "### <font color=\"blue\">Посмотрите на распределение количества посадочных мест для улиц с большим количеством объектов общественного питания. Какие закономерности можно выявить?"
+    "### <font color=\"blue\">Проанализировать распределение количества посадочных мест для улиц с большим количеством объектов общественного питания. Какие закономерности можно выявить?"
    ]
   },
   {
