--- a/11 ML/ML.ipynb
+++ b/11 ML/ML.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Шаг 1. Загрузите данные\n",
+    "### Шаг 1. Загрузить данные\n",
     "\n",
     "«Культурист-датасаентист» предоставил сведения в csv-файлах. Заказчик подготовил данные, которые содержат данные на месяц до оттока и факт оттока на определённый месяц. \n",
     "\n",
@@ -332,10 +332,10 @@
    "metadata": {},
    "source": [
     "### Исследовательский анализ данных (EDA)\n",
-    "- Посмотрите на датасет: есть ли в нем отсутствующие признаки, изучите средние значения и стандартные отклонения (пригодится метод describe());\n",
-    "- Посмотрите на средние значения признаков в двух группах — тех, кто ушел в отток и тех, кто остался (воспользуйтесь методом groupby());\n",
-    "- Постройте столбчатые гистограммы и распределения признаков для тех, кто ушёл (отток) и тех, кто остался (не попали в отток);\n",
-    "- Постройте матрицу корреляций и отобразите её."
+    "- Есть ли в датасете отсутствующие признаки, изучить средние значения и стандартные отклонения;\n",
+    "- Проанализировать средние значения признаков в двух группах — тех, кто ушел в отток и тех, кто остался;\n",
+    "- Построить столбчатые гистограммы и распределения признаков для тех, кто ушёл (отток) и тех, кто остался (не попали в отток);\n",
+    "- Построить матрицу корреляций и отобразить её."
    ]
   },
   {
@@ -1024,14 +1024,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Шаг 3. Постройте модель прогнозирования оттока пользователей\n",
-    "Постройте модель бинарной классификации пользователей, где целевой признак — факт оттока пользователя в следующем месяце:\n",
-    "- Разбейте данные на обучающую и валидационную выборку функцией train_test_split().\n",
-    "- Обучите модель на train-выборке двумя способами:\n",
+    "### Шаг 3. Построить модель прогнозирования оттока пользователей\n",
+    "Построить модель бинарной классификации пользователей, где целевой признак — факт оттока пользователя в следующем месяце:\n",
+    "- Разбить данные на обучающую и валидационную выборку функцией train_test_split().\n",
+    "- Обучить модель на train-выборке двумя способами:\n",
     "    - логистической регрессией\n",
     "    - случайным лесом\n",
-    "- Оцените метрики accuracy, precision и recall для обеих моделей на валидационной выборке. Сравните по ним модели. Какая модель показала себя лучше на основании метрик?\n",
-    "Не забудьте указать параметр random_state при разделении выборки и задании алгоритма."
+    "- Оценить метрики accuracy, precision и recall для обеих моделей на валидационной выборке. Сравнить по ним модели. Какая модель показала себя лучше на основании метрик?"
    ]
   },
   {
@@ -1139,14 +1138,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Шаг 4. Сделайте кластеризацию пользователей\n",
-    "Отложите в сторону столбец с оттоком и проведите кластеризацию объектов (пользователей):\n",
-    "- Стандартизируйте данные.\n",
-    "- Постройте матрицу расстояний функцией linkage() на стандартизованной матрице признаков и нарисуйте дендрограмму. Внимание: отрисовка дендрограммы может занять время! На основании полученного графика предположите, какое количество кластеров можно выделить.\n",
-    "- Обучите модель кластеризации на основании алгоритма K-Means и спрогнозируйте кластеры клиентов. Договоримся за число кластеров принять n=5, чтобы ваши результаты можно было сравнивать с результатами остальных студентов. Однако, конечно, в жизни никто не скажет вам правильный ответ, и решение остаётся за вами (на основании изучения графика из предыдущего пункта).\n",
-    "- Посмотрите на средние значения признаков для кластеров. Можно ли сразу что-то заметить?\n",
-    "- Постройте распределения признаков для кластеров. Можно ли что-то заметить по ним?\n",
-    "- Для каждого полученного кластера посчитайте долю оттока (методом groupby()). Отличаются ли они по доле оттока? Какие кластеры склонны к оттоку, а какие — надёжны?"
+    "### Шаг 4. Провести кластеризацию пользователей\n",
+    "Провести кластеризацию объектов (пользователей):\n",
+    "- Стандартизировать данные.\n",
+    "- Построить матрицу расстояний функцией linkage() на стандартизованной матрице признаков и нарисуйте дендрограмму. На основании полученного графика предположить, какое количество кластеров можно выделить.\n",
+    "- Обучить модель кластеризации на основании алгоритма K-Means и спрогнозировать кластеры клиентов.\n",
+    "- Проанализировать средние значения признаков для кластеров. Можно ли сразу что-то заметить?\n",
+    "- Построить распределения признаков для кластеров. Можно ли что-то заметить по ним?\n",
+    "- Для каждого полученного кластера посчитать долю оттока. Отличаются ли они по доле оттока? Какие кластеры склонны к оттоку, а какие — надёжны?"
    ]
   },
   {
@@ -1320,7 +1319,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Обучите модель кластеризации на основании алгоритма K-Means и спрогнозируйте кластеры клиентов."
+    "#### Обучить модель кластеризации на основании алгоритма K-Means и спрогнозировать кластеры клиентов."
    ]
   },
   {
@@ -1511,7 +1510,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Посмотрите на средние значения признаков для кластеров. "
+    "#### Проанализировать средние значения признаков для кластеров. "
    ]
   },
   {
@@ -1790,7 +1789,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Постройте распределения признаков для кластеров."
+    "#### Построить распределения признаков для кластеров."
    ]
   },
   {
@@ -1992,7 +1991,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Для каждого полученного кластера посчитайте долю оттока"
+    "#### Для каждого полученного кластера посчитать долю оттока"
    ]
   },
   {
@@ -2256,9 +2255,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Шаг 5. Сформулируйте выводы и сделайте базовые рекомендации по работе с клиентами\n",
-    "Сформулируйте основные выводы и предложите рекомендации для стратегии взаимодействия с пользователями и их удержания.\n",
-    "Не описывайте стратегию детально: достаточно 3-4 важных принципов и примеров их реализации в виде определённых маркетинговых действий."
+    "### Шаг 5. Сформулировать выводы и сделать базовые рекомендации по работе с клиентами\n",
+    "Сформулировать основные выводы и предложить рекомендации для стратегии взаимодействия с пользователями и их удержания."
    ]
   },
   {
@@ -2271,7 +2269,7 @@
     "\n",
     "Высокую лояльность показывают клиенты, посещающие групповые программы. В таких группах завязываются дружеские отношения, что еще больше привязывает клиента к залу. Можно предложить стимулировать вовлечение в групповые занятия, например - бесплатные пробные посещения, пакетные предложения на эти тренировки и т.д.\n",
     "\n",
-    "Низкий уровень оттока наблюдается у клиентов с долгими абонементами. Если у клиента абонемент действует еще полгода, уходить он обычно не торопится. Нужноь стимулировать приобретение полугодовых и годовых абонементов,  в первую очередь - значительными скидками, бесплатными посещениями групповых занятий, скидками на дополнительные услуги.\n",
+    "Низкий уровень оттока наблюдается у клиентов с долгими абонементами. Если у клиента абонемент действует еще полгода, уходить он обычно не торопится. Нужно стимулировать приобретение полугодовых и годовых абонементов,  в первую очередь - значительными скидками, бесплатными посещениями групповых занятий, скидками на дополнительные услуги.\n",
     "\n",
     "Прискорбно, что кластер, который почти поголовно покидает наш зал, является самым молодым. На удержание молодежи следует обратить внимание. Как способ удержания можно предложить ввести групповые занятия, нацеленные именно на более молодых клиентов и более активно предлагать им пользоваться скидкой \"Приведи друга\" - возможно в зале просто слишком клиентов 20-25 лет и им неуютно среди болеее старших посетителей. Впрочем, это тема отдельного аналитического исследования."
    ]
