--- a/12 Graduation/graduation.ipynb
+++ b/12 Graduation/graduation.ipynb
@@ -11,15 +11,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Выделите различающиеся по продуктовым метрикам группы пользователей на основе событий, которые они выполняют в мобильном приложении.\n",
+    "Выделить различающиеся по продуктовым метрикам группы пользователей на основе событий, которые они выполняют в мобильном приложении.\n",
     "\n",
-    "- Проведите исследовательский анализ данных\n",
-    "- Сегментируйте пользователей на основе событий\n",
-    "- Проверьте статистические гипотезы\n",
+    "- Провести исследовательский анализ данных\n",
+    "- Сегментировать пользователей на основе событий\n",
+    "- Проверить статистические гипотезы\n",
     "\n",
-    "    *Проверьте гипотезу различия конверсии в просмотры контактов между теми пользователями, которые совершили установку приложения, прийдя с источника `yandex` и пользователя, совершившими установки, из источника `google`*\n",
+    "    *Проверить гипотезу различия конверсии в просмотры контактов между теми пользователями, которые совершили установку приложения, прийдя с источника `yandex` и пользователя, совершившими установки, из источника `google`*\n",
     "\n",
-    "    *Сформулируйте и проверьте статистическую гипотезу относительно представленных данных*"
+    "    *Сформулировать и проверить статистическую гипотезу относительно представленных данных*"
    ]
   },
   {
@@ -60,28 +60,28 @@
     "## План работы над проектом\n",
     "\n",
     "#### Предварительный анализ данных\n",
-    "- Предобработка данных.\n",
-    "- Исследовательский анализ данных.\n",
-    "- Расчет новых признаков - продуктовых метрик для каждого клиента:\n",
+    "- Провести предобработку данных.\n",
+    "- Провести исследовательский анализ данных.\n",
+    "- Провести расчет новых признаков - продуктовых метрик для каждого клиента:\n",
     "    - retention rate\n",
     "    - время в приложении\n",
     "    - частота совершения событий \n",
     "    - конверсия в целевое действие `contacts_show`\n",
-    "- EDA. Анализ качества признаков (отсутствующие признаки, средние значения и стандартные отклонения).\n",
-    "- EDA. Формулировка предварительных гипотез на основе результата анализа признаков (построение столбчатых гистограмм и распределения признаков, построение матрицы корреляции для признаков).\n",
-    "- Стандартизация данных.\n",
+    "- EDA. Провести анализ качества признаков (отсутствующие признаки, средние значения и стандартные отклонения).\n",
+    "- EDA. Сформулировать предварительные гипотезы на основе результата анализа признаков (построение столбчатых гистограмм и распределения признаков, построение матрицы корреляции для признаков).\n",
+    "- Провести стандартизацию данных.\n",
     "#### Выделение групп пользователей\n",
-    "- Построение матрицы расстояний на стандартизованной матрице признаков и отрисовка дендрограммы\n",
-    "- Определение числа кластеров на основе дендрограммы.\n",
-    "- Выбор и обучение модели кластеризации, прогнозирование кластеров клиентов.\n",
-    "- Анализ средних значений признаков для кластеров.\n",
-    "- Анализ распределения признаков по кластерам.\n",
-    "- Анализ распределения целевой переменной по кластерам.\n",
+    "- Построенить матрицу расстояний на стандартизованной матрице признаков и отрисовать дендрограмму\n",
+    "- Определить числа кластеров на основе дендрограммы.\n",
+    "- Выбрать и обучить модель кластеризации, спрогнозировать кластеров клиентов.\n",
+    "- Проанализироавть средних значений признаков для кластеров.\n",
+    "- Проанализироавть распределения признаков по кластерам.\n",
+    "- Проанализироавть распределения целевой переменной по кластерам.\n",
     "#### Подведение итогов и представление результатов. \n",
-    "- Формулировка выводов о поведении пользователей из разных групп.\n",
-    "- Построение дашборда в Tableau\n",
+    "- Сформулировать выводы о поведении пользователей из разных групп.\n",
+    "- Построить дашборд в Tableau\n",
     "#### Проверка статистических гипотез\n",
-    "- Проверьте гипотезу различия конверсии в просмотры контактов между теми пользователями, которые совершили установку приложения, прийдя с источника yandex и пользователя, совершившими установки, из источника google"
+    "- Проверить гипотезу различия конверсии в просмотры контактов между теми пользователями, которые совершили установку приложения, прийдя с источника yandex и пользователя, совершившими установки, из источника google"
    ]
   },
   {
